# hq0-lead-outreach-sequencer

./: README.md  leads_sample.json  pyproject.toml
knowledge/: user_preference.txt
src/lead_outreach_sequencer/: crew.py  main.py
src/lead_outreach_sequencer/config/: agents.yaml  tasks.yaml
src/lead_outreach_sequencer/config/draft/: agents.yaml  tasks.yaml
src/lead_outreach_sequencer/config/send/: agents.yaml  tasks.yaml
src/lead_outreach_sequencer/tools/: gmail_smtp_tool.py
