[project]
name = "lead_outreach_sequencer"
version = "0.1.0"
description = "lead_outreach_sequencer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.4",
    "firecrawl-py>=1.0.0",
]

[project.scripts]
lead_outreach_sequencer = "lead_outreach_sequencer.main:run"
run_crew = "lead_outreach_sequencer.main:run"
train = "lead_outreach_sequencer.main:train"
replay = "lead_outreach_sequencer.main:replay"
test = "lead_outreach_sequencer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
